--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "db:migrate": "supabase db push"
   },
   "dependencies": {
-    "@11labs/client": "^0.2.0",
     "@ai-sdk/anthropic": "^1.0.6",
     "@anthropic-ai/sdk": "^0.32.1",
+    "@elevenlabs/client": "^0.12.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.1",
