--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
 # Dependencies
-node_modules/
-.pnp/
+/node_modules
+/.pnp
 .pnp.js
 
-# Build
-.next/
-out/
-build/
-dist/
+# Testing
+/coverage
 
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+.DS_Store
+*.pem
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store
+# Local env files
+.env*.local
+.env
 
 # Vercel
 .vercel
@@ -34,11 +32,3 @@ yarn-error.log*
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
-
-# Testing
-coverage/
-
-# Misc
-*.log
-.cache/
-.env*.local
