--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "@elevenlabs/client": "^0.12.2",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.45.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
     "next": "14.2.15",
+    "openai": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.17.6",
